--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.Holo.Light">
+    <!--android:theme="@style/AppTheme">  -->
+
         <activity android:name=".CrimeListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -17,6 +19,8 @@
         </activity>
         <activity android:name=".CrimePagerActivity"
                   android:label="@string/app_name">
+                  <meta-data android:name="android.support.PARENT_ACTIVITY"
+                      android:value=".CrimeListActivity"/>
         </activity>
     </application>
 
