--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.android.huminskiy1325.criminalintent">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera2.full"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.Holo.Light">
-    <!--android:theme="@style/AppTheme">  -->
+        android:theme="@android:style/Theme.Material.Light.DarkActionBar">
+        <!--android:theme="@android:style/Theme.Holo.Light"> -->
+        <!--android:theme="@style/AppTheme">  -->
 
         <activity android:name=".CrimeListActivity">
             <intent-filter>
@@ -17,11 +22,19 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity android:name=".CrimePagerActivity"
                   android:label="@string/app_name">
                   <meta-data android:name="android.support.PARENT_ACTIVITY"
                       android:value=".CrimeListActivity"/>
         </activity>
+
+        <activity android:name=".CrimeCameraActivity"
+            android:label="@string/app_name"
+            android:exported="true"
+            android:screenOrientation="landscape">
+        </activity>
+
     </application>
 
 </manifest>
